# jwc-lang

./: Cargo.toml  README.md  ROADMAP.md  build.ps1  build.sh  install.ps1  install.sh  jwc.cmd  jwc.ps1  jwc.sh  jwcv1.md  uninstall.ps1  uninstall.sh
.github/: copilot-instructions.md
examples/: hello.jwc  migrate_new.jwc  migrate_old.jwc  oop_counter.jwc  sample.jwc  select.jwc  server.jwc  server_oop_state.jwc  test.jwc  todo_api.jwc
examples/featured_v1/: App.jwc  DbContext.jwc  config.json  jwcproj.json
examples/featured_v1/features/todo/: Todo.jwc  TodoController.jwc  TodoService.jwc
examples/featuredv2/: app.jwc
examples/featuredv2/features/: app_database.jwc
examples/featuredv2/features/todos/: todo.jwc
examples/mini_v1/: jwcproj.json  main.jwc
examples/mini_v1/migrations/: 1770918046_init.sql  schema.snapshot.json
examples/testapp/: .env  README.md  main.jwc  testapp.jwcproj
examples/testapp/migrations/: 1772600000_init-db.down.sql  1772600000_init-db.up.sql  1773313223_init-db.down.sql  1773313223_init-db.up.sql
examples/testapp/src/controllers/: BrandController.jwc  CarController.jwc  ColorController.jwc
src/: ast.rs  config.rs  db.rs  diag.rs  engine.rs  error_report.rs  lexer.rs  main.rs  manifest.rs  migrate.rs  migrations.rs  parser.rs  project.rs  query_sql.rs  runner.rs  scaffold.rs  schema_snapshot.rs  server.rs  sql.rs
vscode-extension/: LICENSE  jwc-lang-0.1.0.vsix  language-configuration.json  package-lock.json  package.json
vscode-extension/snippets/: jwc.code-snippets
vscode-extension/syntaxes/: jwc.tmLanguage.json
(+7 files in other folders)
