[package]
name = "jwc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
lazy_static = "1.5.0"
postgres = "0.19.12"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
url = "2"
